add sucrase and nodemon

--- a/package.json
+++ b/package.json
@@ -5,8 +5,16 @@
   "repository": "git@github.com:Robinsondssantos/sms-tiger.git",
   "author": "Robinson D. S. Santos <robinsondssantos@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/server.js",
+    "dev:debug": "nodemon --inspect src/server.js"
+  },
   "dependencies": {
     "axios": "^0.19.2",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2",
+    "sucrase": "^3.12.1"
   }
 }
