--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "express": "^4.17.1"
+    "bcryptjs": "^2.4.3",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "sequelize": "^5.21.5",
+    "yup": "^0.28.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2",
